deploy/auths.yaml
apiVersion: v1
kind: Service
metadata:
  name: auths
  namespace: contacts
  labels:
    app: auths
spec:
  type: NodePort
  ports:
  - targetPort: 8040
    port: 80
  selector:
    app: auths
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auths
  namespace: contacts
  labels:
    app: auths
spec:
  selector:
    matchLabels:
      app: auths
  replicas: 1
  template:
    metadata:
      labels:
        app: auths
    spec:
      containers:
      - name: auths
        image: infoblox/contacts-auths:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8040
---
